dockerAssgn/logs/dag_id=database_postgres/run_id=manual__2023-06-14T13:08:16.627225+00:00/task_id=create_table/attempt=1.log
[2023-06-14T13:08:18.070+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.create_table manual__2023-06-14T13:08:16.627225+00:00 [queued]>
[2023-06-14T13:08:18.076+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.create_table manual__2023-06-14T13:08:16.627225+00:00 [queued]>
[2023-06-14T13:08:18.077+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:08:18.077+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-06-14T13:08:18.077+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:08:18.085+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_table> on 2023-06-14 13:08:16.627225+00:00
[2023-06-14T13:08:18.090+0000] {standard_task_runner.py:55} INFO - Started process 551 to run task
[2023-06-14T13:08:18.093+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'database_postgres', 'create_table', 'manual__2023-06-14T13:08:16.627225+00:00', '--job-id', '8', '--raw', '--subdir', 'DAGS_FOLDER/postgress_db.py', '--cfg-path', '/tmp/tmplxwumme9']
[2023-06-14T13:08:18.094+0000] {standard_task_runner.py:83} INFO - Job 8: Subtask create_table
[2023-06-14T13:08:18.143+0000] {task_command.py:388} INFO - Running <TaskInstance: database_postgres.create_table manual__2023-06-14T13:08:16.627225+00:00 [running]> on host 73219206ba7b
[2023-06-14T13:08:18.189+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=database_postgres
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-06-14T13:08:16.627225+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-14T13:08:16.627225+00:00
[2023-06-14T13:08:18.190+0000] {sql.py:254} INFO - Executing: CREATE TABLE IF NOT EXISTS my_table (
  id INT UNIQUE NOT NULL,
  current_time TIMESTAMP DEFAULT now()
);
[2023-06-14T13:08:18.198+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:08:18.297+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:08:18.302+0000] {sql.py:375} INFO - Running statement: CREATE TABLE IF NOT EXISTS my_table (
  id INT UNIQUE NOT NULL,
  current_time TIMESTAMP DEFAULT now()
);, parameters: None
[2023-06-14T13:08:18.303+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "current_time"
LINE 3:   current_time TIMESTAMP DEFAULT now()
          ^

[2023-06-14T13:08:18.311+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=database_postgres, task_id=create_table, execution_date=20230614T130816, start_date=20230614T130818, end_date=20230614T130818
[2023-06-14T13:08:18.318+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 8 for task create_table (syntax error at or near "current_time"
LINE 3:   current_time TIMESTAMP DEFAULT now()
          ^
; 551)
[2023-06-14T13:08:18.348+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-06-14T13:08:18.366+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
